[0.10] Fix css & html style (#487)
* cleanup css; fix linter
* replace scoped css with bs classes
* add cell content as title; allow to toggle text-overflow
* Fixed attribute list scrollbar not visible
* remove _ from import and change order
* Match code font-size with normal text; rework code classes

--- a/resources/sass/_utilities.scss
+++ b/resources/sass/_utilities.scss
@@ -10,7 +10,7 @@
     font-size: 0.5em !important;
 }
 
-.fs-1 {
+.fs-1r {
     font-size: 1rem !important;
 }
 
@@ -57,14 +57,6 @@
     padding-right: calc(var(--bs-gutter-x) / 2);
 }
 
-.prows {
-    padding-left: calc(var(--bs-gutter-x) / 2);
-}
-
-.prowe {
-    padding-right: calc(var(--bs-gutter-x) / 2);
-}
-
 .ms--4 {
     margin-left: -1.5rem;
 }
@@ -81,18 +73,6 @@
     margin-left: -3.25rem;
 }
 
-.h-15r {
-    height: 1.5rem !important;
-}
-
-.w-15r {
-    width: 1.5rem !important;
-}
-
-.w-1 {
-    width: 1% !important;
-}
-
 .w-90 {
     width: 90% !important;
 }
@@ -107,14 +87,6 @@
 
 .minw-30 {
     min-width: 30rem !important;
-}
-
-.align-middle {
-    vertical-align: middle;
-}
-
-.text-nowrap {
-    white-space: nowrap;
 }
 
 .text-prewrap {
@@ -189,38 +161,6 @@
 
 .not-allowed-handle {
     cursor: not-allowed;
-}
-
-.scroll-x-hidden {
-    overflow-x: hidden;
-}
-
-.scroll-x-auto {
-    overflow-x: auto;
-}
-
-.scroll-y-auto {
-    overflow-y: auto;
-}
-
-.scroll-x {
-    overflow-x: scroll;
-}
-
-.scroll-y {
-    overflow-y: scroll;
-}
-
-.scroll-visible {
-    overflow: visible;
-}
-
-.scroll-x-visible {
-    overflow-x: visible;
-}
-
-.scroll-y-visible {
-    overflow-y: visible;
 }
 
 .bg-none {
